--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,21 @@
     </properties>
     
     <dependencies>
+        
+        <!-- Jersey Container -->
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet</artifactId>
+            <version>2.25</version>
+        </dependency>
+        
+        <!-- Jersey Parameter Injection -->
+         <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>2.26-b06</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
